# App

./: .gitignore  .pre-commit-config.yaml  Dockerfile.backend  README.md  backend.Dockerfile  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  deploy_backend.yml  deploy_frontend.yml  docker_build.yml  pre-commit.yml
backend/: readme.md
backend/app/: main.py  requirements.txt
backend/app/api/: main.py
backend/app/api/routes/: grammar_checker.py  topic_to_article.py  url_to_topic.py
backend/app/api/v1/endpoints/: url_to_topic.py
backend/app/core/: config.py
backend/app/db/: database.py  main.py  models.py  schemas.py
backend/app/iitsrc/: Evaluation.ipynb  article_response_converter.py  articles.xlsx  csv_generator.py  dspy_llm_judge.py  generated_articles.csv  llm_as_judge_scores.csv  original_articles.csv
backend/app/iitsrc/.ipynb_checkpoints/: Evaluation-checkpoint.ipynb  llm_as_judge_scores-checkpoint.csv
backend/app/services/ai_service/: GRAPH_TEST.py  TEST_GRAPH.py  article_generator.py  dspy_signature_guidelines.py  dspy_signatures.py  graph_test_create.py  graph_test_save_pic.py  litellm_service.py  response_models.py  test_graph_code.txt
backend/app/services/ai_service/optimized_signatures/: Generate_Body.json  Generate_Headlines.json  Generate_Perex.json  Generate_Tags.json
backend/app/services/ai_service/storm_agent/: FileIOHelper.py  STORM_service.py  VectorStoreManager.py
backend/app/services/scraping_service/: jina_scraper.py  playwright_scraper.py
backend/app/utils/: default_article.py  graph_helper.py  language_enum.py  scraping_cache_functions.py  url_getter.py
database/: database.py  databases.py  docker-compose.yaml  main.py  models.py  schemas.py  services.py
database/router/: posts.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: base.css  hamburgers.css  main.css
frontend/src/components/: AiContent.vue  ArticleBlock.vue  ErrorMessage.vue  GraphChart.vue  LoadingSpinner.vue  Navbar.vue  ProgressBar.vue  SaveChangesPopup.vue  SrcUrlBlock.vue  ToggleSwitch.vue
frontend/src/router/: index.ts
frontend/src/services/: Api.ts  ArticleService.ts  TopicsService.ts
frontend/src/stores/: articleStore.ts  topicsStore.ts
frontend/src/views/: ArticleView.vue  HistoryView.vue  HomeView.vue  TeamPageView.vue  TopicView.vue
frontend/src/views/ArticleView/: ArticleView.vue  Buttons.vue  Suggestions.vue
scraper/: .gitignore
