[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dspy>=2.6.10",
    "fastapi>=0.115.11",
    "fastapi-cache2>=0.2.2",
    "fs>=2.4.16",
    "knowledge-storm>=1.0.1",
    "markdownify>=1.1.0",
    "openai>=1.65.4",
    "pandas>=2.2.3",
    "playwright>=1.50.0",
    "pydantic>=2.10.6",
    "pydantic-extra-types>=2.10.2",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "pynacl>=1.5.0",
    "redis>=5.2.1",
    "ruff>=0.9.10",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
    "validators>=0.34.0",
]
