[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "dspy>=2.6.10",
    "fastapi>=0.115.11",
    "fastapi-cache2>=0.2.2",
    "fs>=2.4.16",
    "language-tool-python>=2.9.2",
    "markdownify>=1.1.0",
    "openai>=1.65.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "playwright>=1.50.0",
    "pre-commit>=4.1.0",
    "pydantic>=2.10.6",
    "pydantic-extra-types>=2.10.2",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "pynacl>=1.5.0",
    "redis>=5.2.1",
    "ruff>=0.9.10",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
    "validators>=0.34.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "G",
    "SIM1",
    "PLE",
    "N802", "N803", "N815", "N816", "N806",
    "ANN",
    "UP",  # pyupgrade
]

lint.ignore = [
    "E501",  # line too long, handled by Black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "G004",
    "ANN101",
    "ANN003",
    "B904"
]

lint.fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
lint.unfixable = []

lint.exclude = [
    ".git", ".venv", "__pycache__", "node_modules", "build", "dist", "models.py"
]

lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

line-length = 88
target-version = "py39"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-third-party = ["fastapi", "pydantic", "starlette"]
